Bug 1671962 - Iframes loaded from restored session are loaded out of order when Fission enabled, r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D94904